--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   "homepage": "https://github.com/JuheeNoh123/CleanTurn#readme",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "bcrypt": "^6.0.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.1",
+    "redis": "^4.7.1"
   }
 }
